--- a/alura-spa-projeto_inicial/styles/style.css
+++ b/alura-spa-projeto_inicial/styles/style.css
@@ -5,20 +5,26 @@ html, body {
 nav {
   text-align: center;
 }
-
 nav ul li {
   display: inline-block;
   padding: 1rem;
 }
-
 nav ul li a {
   text-transform: uppercase;
   text-decoration: none;
   font-weight: bold;
   color: #495371;
 }
-
 nav ul li a:hover {
   border-bottom: 2px solid #74959A;
 }
-/*# sourceMappingURL=style.css.map */
+
+.banner {
+  background: url(/alura-spa-projeto_inicial/imagens/banner.jpeg) 27% center no-repeat;
+  height: 350px;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.9;
+}/*# sourceMappingURL=style.css.map */
